2007-11-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolder.m ([GCSFolder -versionOfContentWithName:], [GCSFolder
	-fetchContentWithName:]): ignore records marked as deleted.
	([GCSFolder -deletionOfContentWithName:]): don't.

2007-11-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolder.m ([GCSFolder -writeContent:toName:baseVersion:]): the
	test for the improvement below was wrong, we want to test the
	value of the column ('0' or null) instead of whether it is null or
	filled.

2007-10-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolder.m ([GCSFolder -writeContent:toName:baseVersion:]):
	purge the record if previously marked as deleted.

2007-10-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolderManager.m ([GCSFolderManager -baseTableNameWithUID:]):
	prefix the table names with "sogo" to avoid problems with
	digits-only identifiers.

2007-10-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* GCSFolderManager.m ([GCSFolderManager -baseTableNameWithUID:]):
	cast the time interval to an unsigned int.

2007-08-29  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>

	* EOQualifier+GCS.m: rewrote comparison code, now uses UPPER instead of
	  the PostgreSQL specific ILIKE. Fixes OGo bug #1906 (v4.7.49)

2007-07-20  Helge Hess  <helge.hess@opengroupware.org>

	* GCSFolderManager.m: added 'some' rollback after an error (v4.7.48)

2007-07-20  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>

	* GCSFolderManager.m: fixed a bug in last check, DROP TABLE is allowed
	  to fail in the given context (bug #1883) (v4.7.47)

2007-07-11  Helge Hess  <helge.hess@opengroupware.org>

	* GCSFolderManager.m: added some error checking, plenty of open ends
	  pending (eg folder creation not wrapped in a transaction) (v4.7.46)
	
2007-06-29  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>

	* GCSFolderManager.m: fixed folder creation to populate empty path
	  fields with NULLs (OGo bug #1883) (v4.7.45)

2007-04-25  Wolfgang Sourdeau  <WSourdeau@Inverse.CA>
